Added jvm arguments in junit tests.