@@ -192,6 +192,7 @@
 				<version>2.17</version>
 				<configuration>
 					<skipTests>true</skipTests>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<includes>
 						<include>**/AllTestSuite.java</include>
 					</includes>
